--- a/src/components/ContactMe.astro
+++ b/src/components/ContactMe.astro
@@ -7,12 +7,12 @@
             id="contact-me-heading"
             class="text-4xl md:text-5xl mb-4 tracking-tighter leading-none font-heading font-bold text-text-primary"
         >
-            Let's Build Something Together!
+            Let's Connect
         </h2>
         <p class="text-xl mb-8 leading-relaxed tracking-wide text-text-secondary">
-            Looking to enhance your development team with a skilled individual
-            contributor? Connect with me to discover how I can contribute to the
-            success of your organization's projects.
+            I'm always happy to meet other technical leaders, engineers who care
+            about craft, or anyone thinking about similar problems. Drop me a
+            line.
         </p>
         <div class="text-center">
             <a
